# TapewormFS

./: .gitignore  ARCHITECTURE.md  CPP_STYLE.md  OFDM_PHY.md  README.md  SPEC.md  STATE.md  index.html  package-lock.json  package.json  tsconfig.json
debug-suite/src/core/: DSPEngine.ts  Modulator.ts
debug-suite/src/io/: AudioIO.ts  RecorderProcessor.ts
debug-suite/src/visualization/: Visualizer.ts
diagrams/: data.mmd
driver/esp32/: .gitkeep
filesystem/: CMakeLists.txt  Makefile  README.md  dummy_mcu.py  host_driver.py  serial_transport.py  tapefs.py  tapeworm  test_integration.py  test_tapefs.py
filesystem/cpp/: CMakeLists.txt
filesystem/cpp/firmware/: CMakeLists.txt  esp32_hal.cpp  esp32_hal.hpp  firmware.cpp  firmware.hpp  modem_decoder.cpp  modem_decoder.hpp  modem_encoder.cpp  modem_encoder.hpp  motor.cpp  motor.hpp  run_firmware  tape_deck.cpp  tape_deck.hpp  tape_head.hpp  tape_medium.cpp  tape_medium.hpp  tapeworm.sh  test_fw  test_roundtrip  test_roundtrip.cpp  visualizer.hpp  viz_demo  viz_demo.cpp
filesystem/cpp/firmware/include/tapefs/firmware/: DummyMcu.hpp  Modem.hpp  Motor.hpp  TapeDeck.hpp  TapeHead.hpp
filesystem/cpp/firmware/src/: DummyMcu.cpp  Modem.cpp  Motor.cpp  TapeDeck.cpp  TapeHead.cpp
filesystem/cpp/firmware/tests/: run_dummy.cpp  test_firmware.cpp
filesystem/cpp/include/tapefs/: Block.hpp  Crc32.hpp  Directory.hpp  DummyMcu.hpp  Ecc.hpp  Filesystem.hpp  SerialTransport.hpp  Types.hpp
filesystem/cpp/src/: Block.cpp  Crc32.cpp  Directory.cpp  DummyMcu.cpp  Ecc.cpp  Filesystem.cpp  SerialTransport.cpp
filesystem/cpp/tests/: tapeworm_mount.cpp  test_tapefs.cpp
filesystem/driver/: __init__.py  modem.py  tape_channel.py
filesystem/include/: tapefs.h
filesystem/src/: block.c  crc32.c  directory.c  ecc.c  tapefs.c  test_tapefs.c
firmware/: README.md
firmware/esp32/: README.md
firmware/rp2040/: README.md
headers/: dsp.h  io.h
host-driver/: README.md
src/: main.ts
src/core/: Decoder.ts  Encoder.ts  Types.ts
src/core/processors/: Basic.ts  FrequencyPulse.ts
src/io/: WavMetadata.ts
